Fix: Resource menu overlap by viewer content (#2100)

--- a/geonode_mapstore_client/client/themes/geonode/less/_base.less
+++ b/geonode_mapstore_client/client/themes/geonode/less/_base.less
@@ -177,6 +177,7 @@ body {
     .gn-viewer-layout-center {
         overflow-y: auto;
         overflow-x: hidden;
+        z-index: 1;
     }
 }
 
